rotas de empresa e swagger prontas
